Updated Matplotbib Comment

--- a/New folder/JupyterProject/Basic Seaborn.ipynb
+++ b/New folder/JupyterProject/Basic Seaborn.ipynb
@@ -13,30 +13,28 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-26T16:35:24.852536Z",
-     "start_time": "2025-08-26T16:35:24.846032Z"
+     "end_time": "2025-08-27T02:31:10.110438Z",
+     "start_time": "2025-08-27T02:31:10.106561Z"
     }
    },
    "cell_type": "code",
-   "source": [
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt"
-   ],
-   "id": "49c5eb59e6b0a9eb",
+   "source": "import seaborn as sns",
+   "id": "f87340338dd239ef",
    "outputs": [],
    "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-26T16:35:27.964148Z",
-     "start_time": "2025-08-26T16:35:27.883591Z"
+     "end_time": "2025-08-27T02:31:25.916394Z",
+     "start_time": "2025-08-27T02:31:25.885754Z"
     }
    },
    "cell_type": "code",
    "source": [
     "tips=sns.load_dataset('tips')\n",
-    "tips"
+    "tips\n",
+    " #Random dataset file"
    ],
    "id": "d87a63750fb31653",
    "outputs": [
@@ -203,12 +201,12 @@
        "</div>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 4
   },
   {
    "metadata": {},
